# openDVC

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  config.h.in
colourizer/: Makefile
colourizer/dep/: cfgReader.d  colourizer.d  main.d
colourizer/inc/: colourizer.h
colourizer/src/: colourizer.cpp  main.cpp  mvMultiFrame.cpp  mvSameColour.cpp  mvSearchColour.cpp
common/: Makefile
common/inc/: ME.h  cavlc.h  codec.h  config.h  fileManager.h  frameBuffer.h  ldpca.h  transform.h  types.h
common/src/: ME.cpp  cavlc.cpp  ldpca.cpp  transform.cpp
decoder/: Makefile
decoder/inc/: cavlcDec.h  corrModel.h  decoder.h  ldpcaDec.h  sideInformation.h
decoder/src/: cavlcDec.cpp  corrModel.cpp  decoder.cpp  ldpcaDec.cpp  main.cpp  oneStage.cpp  si_mc.cpp  si_mci.cpp  sideInformation.cpp  twoStage.cpp
encoder/: Makefile
encoder/inc/: cavlcEnc.h  encoder.h  ldpcaEnc.h
encoder/src/: .encoder.cpp  cavlcEnc.cpp  encoder.cpp  encoder3channel.cpp  ldpcaEnc.cpp  main.cpp
inc/common/: bitstream.h  codec.h  config.h  types.h
inc/decoder/: decoder.h
mux/: Makefile
mux/src/: main.cpp
src/: CMakeLists.txt
src/colourizer/: CMakeLists.txt  colourizer.cpp  main.cpp  mvSameColour.cpp  mvSearchColour.cpp
src/common/: CMakeLists.txt  bitstream.h  cavlc.cpp  cavlc.h  codec.h  frameBuffer.h  ldpca.h  transform.h
src/decoder/: CMakeLists.txt  cavlcDec.h  corrModel.h  decoder.cpp  decoder.h  ldpcaDec.cpp  sideInformation.h
src/encoder/: CMakeLists.txt  cavlcEnc.cpp  cavlcEnc.h  encoder.h  encoder3channel.cpp  ldpcaEnc.cpp  testpattern
